Order History Section Added

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 URL=mongodb+srv://Addy:Addy1234@cluster0.bjcy7kh.mongodb.net/?retryWrites=true&w=majority
+PORT=4000
 NODE_ENV=production 
 SECRET=mypetnamesofiaisnineyearsoldblahblahboom
